<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/length_label"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/distance_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Job Length"
        app:layout_constraintBottom_toTopOf="@+id/job_length_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <Spinner
        android:id="@+id/job_length_list"
        android:layout_width="296dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title"
        app:layout_constraintVertical_bias="0.653" />

    <Spinner
        android:id="@+id/distance_list"
        android:layout_width="296dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/job_type_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Job Type"
        app:layout_constraintBottom_toTopOf="@+id/job_type_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/hourly_wage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hourly Wage"
        app:layout_constraintBottom_toTopOf="@+id/hourly_wages_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Spinner
        android:id="@+id/hourly_wages_list"
        android:layout_width="296dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/search_page_title"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:autoText="false"
        android:text="Search"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Spinner
        android:id="@+id/job_type_list"
        android:layout_width="296dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance"
        app:layout_constraintBottom_toTopOf="@+id/distance_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/job_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_length_list"
        app:layout_constraintVertical_bias="0.321" />
</androidx.constraintlayout.widget.ConstraintLayout>