<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="200dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account Login"
                android:textSize="24sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:hint="Username"
                android:textSize="16dp"></EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:hint="Password"
                android:textSize="16dp"></EditText>

            <Button
                android:id="@+id/employerLoginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:text="Employer Login"
                android:textSize="16dp"></Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Or"
                android:textSize="16dp"></TextView>

            <Button
                android:id="@+id/employeeLoginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10px"
                android:gravity="center"
                android:text="Employee Login"
                android:textSize="16dp"></Button>

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="0dip"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:text=""
                android:textSize="16dp"></TextView>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>