<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:layout_marginStart="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN IN"
        android:layout_marginStart="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="POST A JOB"
        android:layout_marginStart="20dp"
        android:layout_gravity="center" />

</LinearLayout>