...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.jobs.JobsFragment">

    <Spinner
        android:id="@+id/categorySpinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:soundEffectsEnabled="true"
...
