<resources>
    <string name="app_name">Quick Cash</string>
    <string name="EMPTY_USERNAME_OR_PASSWORD">Please enter the username and/or password</string>
    <string name="INVALID_PASSWORD">The password must be between 8 and 16 digits long and must contain at least three types of the following: uppercase, lowercase, numbers and special symbols</string>
    <string name="INVALID_USERNAME">The length of the username needs to be between 6 and 16 bits and cannot contain special characters.</string>
    <string name="USER_ALREADY_EXISTS">This user already exists. Please enter another username.</string>
    <string name="USER_DOES_NOT_EXIST">That user does not exist.</string>
    <string name="INCORRECT_PASSWORD">Incorrect password. Please try again.</string>
    <string name="EMPTY_STRING"></string>
    <string name="type_of_job"></string>
    <string name="DATABASE_URL">https://quick-cash-ca106-default-rtdb.firebaseio.com</string>
    <string name="DATABASE_ERROR">Error in connecting to database</string>
    <string name="JOB_NAME_REPEATED">Name is repeated.</string>
    <string name="JOB_ADD_SUCCESS">Job Post Created Successfully</string>
    <string name="JOB_UPDATE_SUCCESS">Job Post Updated Successfully</string>
    <string name="EMPTY_JOBNAME_OR_DESCRIPTION">Please enter the job name and/or job type</string>
    <string name="EMPTY_WAGE">The wage must be entered</string>
    <string name="EMPTY_LOCATION">The location must be entered</string>
    <string name="INVALID_JOBNAME">The length of Job name must be lower than 20 digits and cannot contain special characters</string>
    <string name="INVALID_DESCRIPTION">The length of description must be lower than 50 digits</string>
    <string name="INVALID_WAGE">The wage must be greater than $12.95</string>
    <string name="INVALID_LOCATION">Location could not be found, please re-enter location</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_jobs">Jobs</string>
    <string name="logout_button">Logout</string>
    <string name="EMPTY_LIST">There is no job under this category</string>
    <string name="landing_page_welcome">Welcome to Quick Cash</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_favorite_type_of_job">Your Favorite type of job</string>
    <string name="select_your_favorite_type_of_job">select your favorite type of job</string>
    <string name="Update" />
    <string-array name="identity_labels">
        <item>Employee</item>
        <item>Employer</item>
    </string-array>
    <string-array name="category_names">
        <item>Recommend</item>
        <item>Category - All</item>
        <item>Labour</item>
        <item>Babysitting</item>
        <item>Pet Care</item>
        <item>Delivery</item>
        <item>Tech Help</item>
    </string-array>
    <string-array name="job_type_entries">
        <item>Category - All</item>
        <item>Labour</item>
        <item>Babysitting</item>
        <item>Pet Care</item>
        <item>Delivery</item>
        <item>Tech Help</item>
    </string-array>
    <string-array name="job_prefer_entries">
        <item>Category - All</item>
        <item>Labour</item>
        <item>Babysitting</item>
        <item>Pet Care</item>
        <item>Delivery</item>
        <item>Tech Help</item>
    </string-array>

    <string-array name="hourly_wages_entries">
        <item>$12.95 and up</item>
        <item>$15.00 and up</item>
        <item>$17.00 and up</item>
        <item>$20.00 and up</item>
        <item>$25.00 and up</item>
        <item>$30.00 and up</item>
    </string-array>
    <string-array name="distance_entries">
        <item>Category - All</item>
        <item>1 KM</item>
        <item>3 KM</item>
        <item>5 KM</item>
        <item>10 KM</item>
    </string-array>

    <string-array name="job_duration_entries">
        <item>Category - All</item>
        <item>1 to 3 hours</item>
        <item>3 to 5 hours</item>
        <item>7 hours or more</item>
    </string-array>
</resources>