...
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Select a Role:"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/identitySpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:minHeight="40dp"
            android:outlineProvider="none"
            android:soundEffectsEnabled="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="Register"
            android:textSize="16dp" />
...
